--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hardhat-base",
-  "version": "0.0.1",
-  "description": "Base Hardhat starter project",
+  "name": "hardhat-starter",
+  "version": "0.0.2",
+  "description": "Hardhat starter project scaffolding",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
