--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hardhat-starter",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Hardhat starter project scaffolding",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,5 +31,8 @@
     "typechain": "8.3.2",
     "typescript": "^5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "prettier": "^3.1.1",
+    "prettier-plugin-solidity": "^1.3.1"
+  }
 }
